--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,7 @@
     />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body></body>
+  <body>
+    <div class="content"></div>
+  </body>
 </html>
